--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "16.18.34",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "framer-motion": "10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "2.12.0",
