--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "framer-motion": "10.12.16",
+    "gh-pages": "5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "2.12.0",
@@ -24,8 +25,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://sujin-nuu.github.io/react_protf/",
   "eslintConfig": {
     "extends": [
       "react-app",
